--- a/ch2.tex
+++ b/ch2.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2024 Carl Martin Ludvig Sinander.
+% Copyright (c) 2025 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -348,7 +348,7 @@ we'll restrict our attention to the case of finitely many types.%
 The symmetric realisability problem was studied first.
 \textcite{MaskinRiley1984} took the first steps.
 \textcite{Matthews1984} proved the necessity of the Border inequalities, and conjectured sufficiency.
-The conjecture was proved by \textcite{Border1991}, using the above argument above based on hierarchical allocations and a separating hyperplane.
+The conjecture was proved by \textcite{Border1991}, using the above argument based on hierarchical allocations and a separating hyperplane.
 \textcite{Border2007} obtained the asymmetric version for finitely many types,
 and \textcite{Mierendorff2011} extended this to general type spaces.
 \textcite{HartReny2015border} provide an alternative characterisation of realisability in terms of second-order stochastic dominance.
@@ -1198,7 +1198,7 @@ given weights $\varphi_1,\dots,\varphi_I \in [0,1]$ that sum to $\leq 1$, consid
 	+ c_i \varphi_i \right] 
 \end{equation*}
 %
-subject $Q_i \geq \varphi_i$ and the Border inequalities.
+subject to $Q_i \geq \varphi_i$ and the Border inequalities.
 It can be shown by an elementary argument \parencite[see][]{ErlansonKleiner2019} that whatever the values of $(\varphi_i)_{i=1}^I$, any solution of this linear programme is a \emph{threshold mechanism.}
 Thus optimal mechanisms must be threshold mechanisms.
 
