--- a/ch3.tex
+++ b/ch3.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2024 Carl Martin Ludvig Sinander.
+% Copyright (c) 2025 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -444,7 +444,7 @@ And which is the principal's favourite?
 \paragraph{The literature.} \textcite{LipnowskiRamos2020} characterise principal-optimal equilibria (and more generally, Pareto-optimal equilibria).%
 	\footnote{In their model, the agent learns $T_n$ only if and when she is offered the good in period $n$. This does not make a difference, I believe.
 	For suppose the principal-preferred equilibrium were to feature the agent conditioning her behaviour in period $n+1$
-	on what $T_n$ if she was not offered the good in period $n$.
+	on what $T_n$ was if she was not offered the good in period $n$.
 	Since $T_n$ has no statistical effect on $T_{n+1}$ (that's our IID assumption),
 	this just amounts to the agent randomising in period $n+1$ (when the principal did not offer the good in period $n$);
 	so we can replicate this behaviour by having the agent mix (i.e. she can use her own set of dice to randomise, instead of conditioning her behaviour on the `natural dice' $T_n$).}
