--- a/ms.tex
+++ b/ms.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2024 Carl Martin Ludvig Sinander.
+% Copyright (c) 2025 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 8 November 2024}
+\date{\small This version: 4 February 2025}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -99,7 +99,7 @@ University of Oxford}
 \pagebreak
 \hspace{1pt}\vfill
 \noindent
-Copyright \copyright{} 2024 Carl Martin Ludvig Sinander.
+Copyright \copyright{} 2025 Carl Martin Ludvig Sinander.
 
 \begin{quotation}
 \noindent
@@ -124,7 +124,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 
 These are the notes for a second-year graduate course that I have been teaching at Oxford each autumn since 2021.
 Thanks to Gregorio Curello, Péter Es\H{o}, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
-and to Ufuk Altunbüken, Jo Auer, Catharina Behrens, Josh le Cornu, Tanxin Gao, Justin Hadad, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Sami Petersen, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
+and to Ufuk Altunbüken, Jo Auer, Catharina Behrens, Josh le Cornu, Tanxin Gao, Justin Hadad, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Nils Lager, Arvo Munoz Moran, Sami Petersen, Augustus Smith, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
 
 
 
@@ -434,7 +434,7 @@ In $\R^n$, you'll already be familiar with what convex sets look like.
 	\label{example:fg}
 	%
 	Consider the vector space of functions $[0,1] \to \R$.
-	Let $C$ be the set of all functions $h : [0,1] \to \R$ which have the form
+	Let $C$ be the set of all functions $f : [0,1] \to \R$ which have the form
 	$f(x) = k + (2-k) x$
 	for some $k \in [0,2]$.
 	(Try drawing a picture to visualise $C$.)
