--- a/bibl.bib
+++ b/bibl.bib
@@ -1,4 +1,4 @@
-Copyright (c) 2024 Carl Martin Ludvig Sinander.
+Copyright (c) 2025 Carl Martin Ludvig Sinander.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -2020,9 +2020,9 @@ working papers
 @unpublished{BallKattwinkel2023,
 	author		= "Ian Ball and Deniz Kattwinkel",
 	year		= "2024",
-	title		= "Linking mechanisms",
-	subtitle	= "Limits and robustness",
-	note		= "working paper, 23 Apr 2024",
+	title		= "Quota mechanisms",
+	subtitle	= "Finite-sample optimality and robustness",
+	note		= "working paper, 17 Oct 2024",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2309.07363",
 }
@@ -2139,9 +2139,9 @@ working papers
 
 @unpublished{Laohakunakorn2019,
 	author		= "Krittanai Laohakunakorn",
-	year		= "2023",
+	year		= "2024",
 	title		= "Rent extraction with information acquisition",
-	note		= "working paper, 7 Sep 2023",
+	note		= "working paper, 8 Oct 2024",
 	langid		= "american",
 }
 
