--- a/ch2.tex
+++ b/ch2.tex
@@ -658,7 +658,6 @@ The right-hand side is equal to
 \end{equation*}
 %
 by definition of $Q_i$ and the law of iterated expectations.
-(Recall that agents' types $(T_i)_{i=1}^I$ are independent.)
 Thus expected revenue reads
 %
 \begin{align*}
@@ -1391,7 +1390,7 @@ Remarkably, these conditions are also \emph{sufficient:}
 	\begin{enumerate}
 	
 		\item $(Q_i)_{i=1}^I$ satisfies the Border inequalities,
-		and $Q_i(t_i) \leq E_i$ for every $t_i \in \mathcal{T}_i$ and $i$.
+		and for each $i$, either $Q_i$ is constant or $Q_i(t_i) \leq E_i$ for every $t_i \in \mathcal{T}_i$.
 
 		\item There is a game form and a strategy profile in it
 		that realises $(Q_i,E_i)_{i=1}^I$ as its interim allocation.
